--- a/spa-saas-mvp-client/src/index.css
+++ b/spa-saas-mvp-client/src/index.css
@@ -16,3 +16,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.react-date-picker__wrapper {
+  @apply bg-lightBackgrounds border border-white/30 rounded-md p-2
+}
+
+.react-date-picker__button {
+  @apply text-textsIcons
+}
